// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout snapshot tests > classic layout renders without sidebar 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m 🦊 FocusCode · test/model                                                                                          [39m[22m[38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   /\\_/\\    [39m[38;5;237m│[39m [38;5;221myou › Hello[39m                                                                                             [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m  ( o.o ) ♡ [39m[38;5;237m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                                                          [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   > ^ <  ~ [39m[38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                                         [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > focus layout hides mascot 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m FocusCode · test/model                                                                                             [39m[22m[38;5;208m│[39m
[38;5;208m│[39m [38;5;221myou › Hello[39m                                                                                                          [38;5;208m│[39m
[38;5;208m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                                                                       [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;208m│[39m                                                                                                                      [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > split layout renders sidebar with todo 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m 🦊 FocusCode · test/model                                                                                          [39m[22m[38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   /\\_/\\    [39m[38;5;237m│[39m [38;5;221myou › Hello[39m                                                        [38;5;237m│[39m [38;5;208m📋 Todo[39m                           [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m  ( o.o ) ♡ [39m[38;5;237m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                     [38;5;237m│[39m  ☐ [38;5;203mTask A[39m                         [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   > ^ <  ~ [39m[38;5;237m│[39m                                                                    [38;5;237m│[39m  🔄 [38;5;214mTask B[39m                        [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                    [38;5;237m│[39m                                   [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;

exports[`layout snapshot tests > wide layout renders wider sidebar 1`] = `
"[48;5;233m[38;5;208m╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮[39m
[38;5;208m│[39m[1m[38;5;208m [38;5;237m○[39m 🦊 FocusCode · test/model                                                                                                                                  [39m[22m[38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   /\\_/\\    [39m[38;5;237m│[39m [38;5;221myou › Hello[39m                                                                    [38;5;237m│[39m [38;5;208m📋 Todo[39m                                                       [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m  ( o.o ) ♡ [39m[38;5;237m│[39m [38;5;230mfox › [39m[38;5;230mHi there[0m                                                                 [38;5;237m│[39m  ☐ [38;5;237mWide task[39m                                                  [38;5;208m│[39m
[38;5;208m│[39m[38;5;221m   > ^ <  ~ [39m[38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;208m│[39m            [38;5;237m│[39m                                                                                [38;5;237m│[39m                                                               [38;5;208m│[39m
[38;5;237m├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤[39m
[38;5;208m│[39m[38;5;230mfox» [7m [27m                                                                                                                                                        [39m[38;5;208m│[39m
[38;5;208m│[39m[38;5;237m Foxy 小福 · ask · host · Tab complete · Ctrl+O newline · Ctrl+G mascot · Ctrl+T theme                                                                        [39m[38;5;208m│[39m
[38;5;208m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[39m[49m"
`;
